--- a/src/scss/page/index.scss
+++ b/src/scss/page/index.scss
@@ -22,28 +22,96 @@
     }
     
     &__bottom{
-        position: absolute;
-        bottom: 10.3%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        // position: absolute;
+        // bottom: 10.3%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
 
         .scroll{
+            writing-mode: vertical-rl;
+
             a{
-                display: block;
-                writing-mode: vertical-rl;
-                position: relative;
-                padding-top: 5px;
-                
-                .line{
-                    position: absolute;
-                    left: -5px;                    
-                    bottom: -242%;
-                    width: 1px;
-                    height: 135px;
-                    background: #fff;
-                }
+                display: inline-block;
+                position: absolute;
+                left: 50%;
+                bottom: 0;
+                transform: translate(-50%, -50%);
+                z-index: 2;
+                padding: 10px 10px 110px;
+                color: #fff;
+                font-size: 14px;
+                font-family: "Josefin Sans", sans-serif;
+                line-height: 1;
+                letter-spacing: 0.2em;
+                text-transform: uppercase;
+                text-decoration: none;
+                writing-mode: vertical-lr;
+                transition: 0.2s;
+                overflow: hidden;
             }
+
+            // a{
+            //     display: block;
+            //     writing-mode: vertical-rl;
+            //     position: relative;
+            //     padding-top: 5px;
+                
+            //     .line{
+            //         position: absolute;
+            //         left: -5px;                    
+            //         bottom: -242%;
+            //         width: 1px;
+            //         height: 135px;
+            //         background: #fff;
+            //     }
+            // }
         }
+    }
+
+    a{
+        display: inline-block;
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translate(-50%, -0%);
+        z-index: 2;
+        padding: 10px 5px 110px;
+        color: #fff;
+        text-transform: uppercase;
+        text-decoration: none;
+        writing-mode: vertical-lr;
+        transition: 0.2s;
+        overflow: hidden;
+
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0%;
+            width: 1px;
+            height: 100vh;
+            background: #fff;
+            animation: sdl01 1.5s cubic-bezier(1, 0, 0, 1) infinite;
+        }
+    }
+}
+// KEY FRAME ANIMATION
+@keyframes sdl01 {
+    0% {
+      transform: scale(1, 0);
+      transform-origin: 0 0;
+    }
+    50% {
+      transform: scale(1, 1);
+      transform-origin: 0 0;
+    }
+    50.1% {
+      transform: scale(1, 1);
+      transform-origin: 0 100%;
+    }
+    100% {
+      transform: scale(1, 0);
+      transform-origin: 0 100%;
     }
 }
 
@@ -495,7 +563,7 @@
             .m_content{
                 width: 480px;
                 @media only screen and (max-width: 769px){
-                    width: 600px;
+                    width: 78.125vw;
                 }
 
                 @media only screen and (max-width: 481px){
@@ -525,8 +593,22 @@
                     background: #ffffff;
                     z-index: 1;
                     display: block;
-                    position: relative;
-                    margin-top: 35px;
+                    position: absolute;
+                    top: 6vw;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+
+                    @media only screen and (max-width: 1051px){
+                        top: 8.8vw;
+                    }
+
+                    @media only screen and (max-width: 769px){
+                        top: 13vw;
+                    }
+
+                    @media only screen and (max-width: 481px){
+                        top: 20vw;
+                    }
 
                     &::after{
                         content: '';
@@ -539,17 +621,9 @@
                         z-index: 2;
                         transition: all 0.3s;
                     }
-
-                    @media only screen and (max-width: 1051px){
-                        margin-top: 3.333vw;
-                    }
-
-                    @media only screen and (max-width: 481px){
-                        margin-top: 6.250vw;
-                    }
-                }                
-
-                img:hover + ._line::after{ width: 100%; }
+                }  
+                
+                // img:hover + ._line::after{ width: 100%; }
 
                 a{
                     display: block;
@@ -598,19 +672,25 @@
                         }
                     }
                     // End m_btn    
-                }
+                }                
+
+                a.menu_btn:hover + ._line::after { width: 100% !important; }
 
                 p{
                     position: relative;
                     z-index: 3;
-                    margin: 35px 0;
+                    margin: 80px 0 35px;
 
                     @media only screen and (max-width: 1051px){
-                        margin: 3.333vw 0;
+                        margin: 7.619vw 0 3.333vw;
+                    }
+
+                    @media only screen and (max-width: 769px){
+                        margin: 12vw 0 6vw;
                     }
 
                     @media only screen and (max-width: 481px){
-                        margin: 7.292vw 0;
+                        margin: 17.708vw 0 7.292vw;
                     }
                 }
                 // End p
