--- a/src/scss/page/key_components.scss
+++ b/src/scss/page/key_components.scss
@@ -238,30 +238,50 @@ header{
                     position: fixed;    
                     top: 0;
                     left: 0;   
-                    padding: 12px 0;   
+                    padding: 12px 0;  
+                    
+                    .width_85{
+                        width: 95% !important;
+                        
+                        .nav_item{
 
-                    .nav_item{
-
-                        a{
-                            display: block;
-                            // letter-spacing: 2px;
-
-                            img.icon{                                
-                                width: 7.292vw;
-                                height: auto;
+                            a{
+                                display: block;
+                                // letter-spacing: 2px;
+    
+                                img{
+                                    @media only screen and (max-width: 426px){
+                                        height: 3.2vw;
+                                        width: auto;
+                                    }
+                                }
+    
+                                img.icon{                                
+                                    width: 7.292vw;
+                                    height: auto;
+                                    @media only screen and (max-width: 426px){
+                                        height: 6vw;
+                                        width: auto;
+                                    }
+                                }
+                            }
+    
+                            .nav_logo{
+                                img{
+                                    width: 13.542vw;
+                                    @media only screen and (max-width: 426px){
+                                        height: 6.2vw;
+                                        width: auto;
+                                    }
+                                }
                             }
                         }
-
-                        .nav_logo{
-                            img{
-                                width: 13.542vw;
-                            }
-                        }
-                    }
+                        // End nav_item
+                    }   
+                    // End width_85
                 }
                 // End nav
                 
-                // End nav_fix
             }
             // view_sp
         }
@@ -279,10 +299,14 @@ footer{
         padding: 75px 0 80px;   
     }
 
+    @media only screen and (max-width: 481px){
+        padding: 12vw 0 10vw;
+    }
+
     .view_pc{
         .width_100{
             .foot_nav_list{
-                width: 1000px;
+                width: 100%;
                 margin-bottom: 4.643vw;
                 justify-content: center;
                 
@@ -351,7 +375,13 @@ footer{
                     border-right: 1px solid none;
 
                     a{
-                        display: block;                    
+                        display: block;     
+                        img{
+                            @media only screen and (max-width: 426px){
+                                height: 3.5vw;
+                                width: auto;
+                            } 
+                        }              
 
                         .ft_social{
                             width: 7.292vw;
@@ -394,6 +424,15 @@ footer{
 
             }
             // End ul
+        }
+
+        .ft_btm{
+            p{
+                letter-spacing: 0.2vw;
+                @media only screen and (max-width: 426px){
+                    font-size: 12px;
+                }                
+            }
         }
     }
     // End view_sp
