--- a/src/scss/page/index.scss
+++ b/src/scss/page/index.scss
@@ -963,6 +963,7 @@
                         }
 
                         p{
+                            letter-spacing:-1px;
                             padding-bottom: 6.510vw;
 
                             @media only screen and (max-width: 481px){
@@ -970,7 +971,7 @@
                             }
 
                             @media only screen and (max-width: 476px){
-                                letter-spacing: 0;
+                                letter-spacing:-1px;
                                 font-size: 17px;
                             }
                         }
